# maki

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  NOTE  NOTES  README.md  abstract.md  build.sh  dump_ast.sh  insights.md  interesting-macros.txt  maki  regen_test.sh  regen_tests.sh  replicate_results.sh  reset_evaluation.sh  test.c  test.json
datasets/: all_raw_data.csv  figure_3_chart_data.csv  figure_4_chart_data.csv  macro_analyzer_raw_times.txt  macro_analyzer_times.csv
datasets/figure_data/: all_raw_data.csv  figure_2_chart_data.csv  figure_3_chart_data.csv
datasets/linux_patch_submissions/accepted/: PATCH-1-1-staging-gdm724x-Replace-macro-GDM_TTY_READY-with-static-inline-function.mbox  PATCH-media-atomisp-pci-hive_isp_css_common-host-vmem-Replace-SUBWORD-macros-with-functions.mbox  PATCH-media-atomisp-pci-sh_css-Replace-macro-STATS_ENABLED-with-function.mbox  PATCH-media-imx-imx-media-fim-Replace-macro-icap_enabled-with-function.mbox  (+2 more)
datasets/porting_enscript_and_m4/: enscript_maki_output.csv  enscript_transformation_notes.md  enscript_transformations.diff  m4_maki_output.csv  m4_transformation_notes.md  m4_transformations.diff
datasets/porting_linux_ipc_and_sound_atmel/: linux_ipc_sound_atmel_transformation_notes.md  linux_ipc_sound_atmel_transformations.diff
datasets/random_sample_notes/: all.csv  only_false_negatives.csv  only_false_positives.csv
datasets/time_data/: definition_analysis_times.csv  invocation_analysis_times.csv
evaluation/: analysis-times.txt  analysis.py  analyze_macro_definitions_in_program.py  analyze_macro_definitions_in_programs.py  analyze_macro_invocations_in_program.py  analyze_macro_invocations_in_programs.py  analyze_macros_in_program.py  analyze_macros_in_programs.py  analyze_result.py  analyze_results.py  analyze_times.py  analyze_transformations_in_program.py  analyze_transformations_in_programs.py  check_program.py  constants.py  evaluate_program.py  evaluate_programs.py  evaluation-times.txt  evaluation_programs.py  evaluation_programs_only_bc.py  get_figure_2_data.py  get_figure_3_data.py  get_figure_4_data.py  macros.py  setup_programs.py  tabulate_analyses.py
evaluation/analyses/: bash-5.2-rc1.json  bc-1.07.1.json  bison-3.8.2.json  cvs-1.11.21.json  emacs-28.1.json  enscript-1.6.6.json  flex-2.6.4.json  fvwm-2.6.9.json  gawk-5.1.1.json  gnuplot-5.4.4.json  gv-3.7.4.json  gzip-1.12.json  linux-6.2-rc2.json  lua-5.4.4.json  m4-1.4.19.json  ncsa-mosaic-af1c9aaaa299da3540faa16dcab82eb681cf624e.json  perl-5.36.0.json  rcs-5.10.0.json  remind.json  xfig-3.2.8b.json  zsh-5.9.json
evaluation/predicates/: argument_altering.py  call_site_context_altering.py  declaration_altering.py  interface_equivalent.py  mennie.py  metaprogramming.py  property_categories.py  thunkizing.py
lib/: ASTUtils.cc  ASTUtils.hh  AlignmentMatchers.cc  AlignmentMatchers.hh  CMakeLists.txt  DeclCollectorMatchHandler.cc  DeclCollectorMatchHandler.hh  DeclStmtTypeLoc.cc  DeclStmtTypeLoc.hh  DefinitionInfoCollector.cc  DefinitionInfoCollector.hh  ExpansionMatchHandler.cc  ExpansionMatchHandler.hh  IncludeCollector.cc  IncludeCollector.hh  InvokedDefinitionInfoCollector.cc  InvokedDefinitionInfoCollector.hh  JSONPrinter.cc  JSONPrinter.hh  Logging.hh  MacroExpansionArgument.cc  MacroExpansionArgument.hh  MacroExpansionNode.cc  MacroExpansionNode.hh  MacroForest.cc  MacroForest.hh  MakiASTConsumer.cc  MakiASTConsumer.hh  MakiAction.cc  MakiAction.hh  MakiFlags.cc  MakiFlags.hh  SourceLocationUtils.cc  SourceLocationUtils.hh  StmtCollectorMatchHandler.cc  StmtCollectorMatchHandler.hh
src/: ASTUtils.cc  ASTUtils.hh  AlignmentMatchers.cc  AlignmentMatchers.hh  CMakeLists.txt  Cpp2CASTConsumer.cc  Cpp2CASTConsumer.hh  Cpp2CAction.cc  Cpp2CAction.hh  DeclCollectorMatchHandler.cc  DeclCollectorMatchHandler.hh  DeclStmt.cc  DeclStmt.hh  DeclStmtTypeLoc.cc  DeclStmtTypeLoc.hh  DefinitionInfoCollector.cc  DefinitionInfoCollector.hh  ExpansionArgumentMatchHandler.cc  ExpansionArgumentMatchHandler.hh  ExpansionMatchHandler.cc  ExpansionMatchHandler.hh  ExpansionMatcher.hh  IncludeCollector.cc  IncludeCollector.hh  JSONPrinter.cc  JSONPrinter.hh  Logging.hh  MacroExpansionArgument.cc  MacroExpansionArgument.hh  MacroExpansionNode.cc  MacroExpansionNode.hh  MacroForest.cc  MacroForest.hh  MakiASTConsumer.cc  MakiASTConsumer.hh  MakiAction.hh  Properties.cc  Properties.hh  StmtCollectorMatchHandler.cc  StmtCollectorMatchHandler.hh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Tests/: addressed_arguments.c  addressed_invocation.c  anonymous_type_arguments.c  anonymous_type_body.c  argument_in_sizeof.c  argument_side_effects.c  arguments_used_where_const_expr_needed.c  array_init_expr.c  backslash_newline.c  bc_modified_arguments.c  bc_strcpy.c  bit_field.c  break.c  break_inside_do_while.c  case_stmt.c  conditional_arguments.c  conditional_operator.c  continue.c  continue_inside_do_while.c  decl_declared_after_macro.c  decl_ref_expr.c  declare_bitmap.c  define_at_non_global_scope.c  do_while.c  eight.h  ends_with_compound.c  enum_decl.c  function_types.c  g.h  global_decl.c  global_includes.c  goto.c  h1.h  h2.h  h4.h  has_same_name_as_other_declaration.c  hygienic.c  ice_bits.c  ice_in_array_fields.c  ice_in_function_parameters.c  (+54 more)
tests/: add.c  addressed_arguments.c  addressed_invocation.c  anonymous_type_arguments.c  anonymous_type_body.c  argument_side_effects.c  array_init_expr.c  bit_field.c  break.c  break_inside_do_while.c  case_stmt.c  conditional_arguments.c  conditional_operator.c  continue.c  continue_inside_do_while.c  decl_declared_after_macro.c  decl_ref_expr.c  declare_bitmap.c  do_while.c  eight.h  enum_decl.c  g.h  global_decl.c  global_includes.c  goto.c  h2.h  h3.h  has_same_name_as_other_declaration.c  hygienic.c  inner.c  invokes_later_defined_macro.c  l_value_dependent.c  l_value_independent.c  local_decl.c  local_type_arguments.c  local_type_body.c  local_type_subexpr.c  logical_and.c  logical_or.c  macro_args.c  (+37 more)
wrappers/: CMakeLists.txt  cpp2c.in  maki.in
(+2 files in other folders)
